# Unlabel

./: README.md
Backend/: .gitignore  API_KEY_SETUP.md  README.md  foodintel.db  pyproject.toml  requirements.txt
Backend/api/: index.py
Backend/app/: main.py
Backend/app/ai/: autonomous_agent.py  comparison_service.py  coordinator.py  explanation_agent.py  ingredient_translator.py  models.py  router.py  schemas.py  service.py
Backend/app/auth/: dependencies.py  router.py  schemas.py  service.py
Backend/app/db/: database.py  models.py
Backend/app/food/: router.py
Backend/app/profile/: router.py  schemas.py  service.py
Backend/config/: settings.py
Frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
Frontend/src/: App.tsx  index.css
Frontend/src/components/hooks/: use-auto-resize-textarea.ts  use-file-input.ts
Frontend/src/components/layout/: Header.tsx
Frontend/src/components/sections/: HowItWorksOrbital.tsx
Frontend/src/components/ui/: AIInput.tsx  AIWaveform.tsx  DecisionCard.tsx  FloatingSeeds.tsx  FoodScanner.tsx  GlassButton.tsx  GlassCard.tsx  InsightCard.tsx  LoadingSpinner.tsx  empty.tsx  hero.tsx  menu-hover-effects.tsx  not-found-page-2.tsx  radial-orbital-timeline.tsx
Frontend/src/contexts/: AuthContext.tsx
Frontend/src/lib/: api.ts
Frontend/src/pages/: Copilot.tsx  FoodSearch.tsx  History.tsx  Home.tsx  Index.tsx  Login.tsx  NotFound.tsx  Profile.tsx  Register.tsx  demo-header.tsx
